# stats-melee

./: .env  .gitignore  Cargo.toml  LICENSE  NOTES.txt  README.md  diesel.toml  stats_melee.db
.github/workflows/: ci.yml  release.yml
migrations/2025-07-01-201324_create_posts/: down.sql  up.sql
src/: analytics.rs  gamedata.rs  lib.rs  main.rs  models.rs  schema.rs
stats-melee/: Cargo.toml  TODO.txt  clear_tables.sh
stats-melee-app/: Cargo.toml  build.rs
stats-melee-app/assets/: README.md
stats-melee-app/installer/: installer.nsi
stats-melee-app/linux/: install.sh  stats-melee.desktop.in  uninstall.sh
stats-melee-app/macos/: Info.plist
stats-melee-app/scripts/: extract-slippi-icons.js  extract-slippi-icons.py
stats-melee-app/src/: app.rs  app_icon.rs  config.rs  icons.rs  main.rs  render_worker.rs  replay_list.rs  slippi.rs  slippi_icons.rs  viewer.rs
stats-melee/docs/: dolphin-frame-dump-notes.md  embedded-video-spike.md  slp-to-dtm-render.md  track12-state.md
stats-melee/migrations/2026-04-20-000000_game_player_stat/: down.sql  up.sql
stats-melee/migrations/2026-04-21-000000_game_player_stat_v2/: down.sql  up.sql
stats-melee/migrations/2026-04-22-000000_punish/: down.sql  up.sql
stats-melee/migrations/2026-04-23-000000_game_replay_path/: down.sql  up.sql
stats-melee/migrations/2026-04-24-000000_game_ingested_at/: down.sql  up.sql
stats-melee/migrations/2026-04-26-000000_game_content_hash/: down.sql  up.sql
stats-melee/migrations/2026-06-18-000000_game_started_at/: down.sql  up.sql
stats-melee/migrations/2026-06-18-010000_game_player_advanced_stats/: down.sql  up.sql
stats-melee/scripts/: track12_validate.sh
stats-melee/src/: advanced.rs  analysis_cache.rs  analytics.rs  combat.rs  dtm.rs  file_cache.rs  gamedata.rs  lib.rs  melee_boot_nav.rs  models.rs  punish.rs  schema.rs  slp_to_dtm.rs  stage_bounds.rs  testing.rs  video_cache.rs
stats-melee/tests/: advanced.rs  combat.rs  ingested_at.rs  nuke.rs  parse.rs  pipeline.rs  punish.rs
