[package]
name = "stats-melee"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
bincode = "1.3"
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.2", features = ["sqlite"] }
# Compile SQLite from source instead of linking a system library, so the
# binary is self-contained and builds on every platform (Windows runners
# have no system SQLite). Feature-unifies across the workspace.
libsqlite3-sys = { version = "0.36", features = ["bundled"] }
peppi = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10"
soccer = "0.0.1"
dotenvy = "0.15"
tempfile = "3"
